# blink

./: README.md  blink.cabal
app/: Main.hs  Rendering.hs  Theme.hs  UI.hs
src/: Blink.hs
src/Blink/: App.hs  Controls.hs  DrawCall.hs  Geometry.hs  Input.hs  Layout.hs  Rendering.hs  Style.hs  UI.hs  Update.hs
test/: Main.hs
test/Blink/: AppSpec.hs  ControlsSpec.hs  Generators.hs  GeometrySpec.hs  LayoutSpec.hs  UISpec.hs
