cabal-version: 3.0
name: blink
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
author: Benjamin Gale
maintainer: benjaminiangale@gmail.com
build-type: Simple

common defaults
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends: base ^>=4.18.3.0

library
    import: defaults
    exposed-modules: Blink
    hs-source-dirs: src

executable demo
    import: defaults
    main-is: Main.hs
    build-depends:
        blink,
        sdl2
    hs-source-dirs: app

test-suite blink-tests
    import: defaults
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    build-depends: blink
