cabal-version: 3.0
name: blink
version: 0.1.0.0
license: Apache-2.0
license-file: LICENSE
author: Benjamin Gale
maintainer: benjaminiangale@gmail.com
build-type: Simple

common defaults
    ghc-options: -Wall
    default-language: Haskell2010
    build-depends:
        base ^>=4.18.3.0,
        containers,
        text

library
    import: defaults
    exposed-modules:
        Blink
        Blink.App
        Blink.Controls
        Blink.Geometry
        Blink.Input
        Blink.Layout
        Blink.Rendering
        Blink.Style
        Blink.UI
    hs-source-dirs: src

executable demo
    import: defaults
    ghc-options: -threaded
    main-is: Main.hs
    other-modules: UI, Theme, Rendering
    build-depends:
        blink,
        sdl2,
        sdl2-ttf
    hs-source-dirs: app

test-suite blink-tests
    import: defaults
    type: exitcode-stdio-1.0
    hs-source-dirs: test
    main-is: Main.hs
    other-modules:
        Blink.AppSpec
        Blink.ControlsSpec
        Blink.Generators
        Blink.GeometrySpec
        Blink.LayoutSpec
        Blink.UISpec
    build-depends:
        blink,
        hspec,
        QuickCheck
